Review tests.R and add distr.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(c_kern)
 export(clean_euler_ridge)
 export(comp_ind_dj)
 export(curv_vmf_polysph)
+export(d_unif_polysph)
+export(d_vmf_polysph)
 export(dist_polysph)
 export(dist_polysph_cross)
 export(dist_polysph_matrix)
@@ -22,7 +24,6 @@ export(eff_kern)
 export(euler_ridge)
 export(grad_L)
 export(grad_hess_kde_polysph)
-export(hd_mc)
 export(hess_L)
 export(hom_test_poly)
 export(index_ridge)
