--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: polykde
 Type: Package
 Title: Polyspherical Kernel Density Estimation
 Version: 1.0.0
-Date: 2025-02-08
+Date: 2025-02-09
 Authors@R: c(person(given = "Eduardo", family = "García-Portugués",
                     role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es",
                     comment = c(ORCID = "0000-0002-9224-4111")),
@@ -13,7 +13,8 @@ Description: Tools for kernel density estimation on the polysphere,
     hypersphere, and circle. Includes functions for density estimation,
     regression estimation, ridge estimation, bandwidth selection, kernels,
     samplers, and homogeneity tests. Companion package to García-Portugués and
-    Meilán-Vila (2024) <doi:10.48550/arXiv.2411.04166>.
+    Meilán-Vila (2024) <doi:10.48550/arXiv.2411.04166> and 
+    García-Portugués and Meilán-Vila (2023) <doi:10.1007/978-3-031-32729-2_4>.
 License: GPL-3
 LazyData: true
 Imports:
