--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,8 +25,9 @@ export(euler_ridge)
 export(grad_L)
 export(grad_hess_kde_polysph)
 export(hess_L)
-export(hom_test_poly)
+export(hom_test_polysph)
 export(index_ridge)
+export(interp_polysph)
 export(kde_polysph)
 export(kre_polysph)
 export(log_cv_kde_polysph)
@@ -43,6 +44,7 @@ export(r_vmf_polysph)
 export(sph_to_angles)
 export(torus_to_angles)
 export(v_d)
+export(view_srep)
 import(Rcpp)
 import(RcppProgress)
 import(graphics)
