--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,12 @@ Authors@R: c(person(given = "Eduardo", family = "García-Portugués",
              person(given = "Andrea", family = "Meilán-Vila",
                     role = c("ctb"), email = "ameilan@est-econ.uc3m.es",
                     comment = c(ORCID = "0000-0001-8537-9280")))
-Description: Tools for kernel density estimation on the polysphere,
-    hypersphere, and circle. Includes functions for density estimation,
-    regression estimation, ridge estimation, bandwidth selection, kernels,
-    samplers, and homogeneity tests. Companion package to García-Portugués and
-    Meilán-Vila (2024) <doi:10.48550/arXiv.2411.04166> and 
-    García-Portugués and Meilán-Vila (2023) <doi:10.1007/978-3-031-32729-2_4>.
+Description: Tools for kernel density estimation on the polysphere, hypersphere,
+    and circle. Includes functions for density estimation, regression estimation,
+    ridge estimation, bandwidth selection, kernels, samplers, and homogeneity
+    tests. Companion package to García-Portugués and Meilán-Vila (2024)
+    <doi:10.48550/arXiv.2411.04166> and García-Portugués and Meilán-Vila (2023)
+    <doi:10.1007/978-3-031-32729-2_4>.
 License: GPL-3
 LazyData: true
 Imports:
