--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,8 @@ Description: Tools for kernel density estimation on the polysphere, hypersphere,
     and circle. Includes functions for density estimation, regression estimation,
     ridge estimation, bandwidth selection, kernels, samplers, and homogeneity
     tests. Companion package to García-Portugués and Meilán-Vila (2024)
-    <doi:10.48550/arXiv.2411.04166> and García-Portugués and Meilán-Vila (2023)
-    <doi:10.1007/978-3-031-32729-2_4>.
+    <doi:10.48550/arXiv.2411.04166> and García-Portugués and Meilán-Vila
+    (2023) <doi:10.1007/978-3-031-32729-2_4>.
 License: GPL-3
 LazyData: true
 Imports:
