--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,8 +32,10 @@ export(kde_polysph)
 export(kre_polysph)
 export(log_cv_kde_polysph)
 export(parallel_euler_ridge)
+export(polylog_minus_exp_mu)
 export(polysph_to_angles)
 export(proj_grad_kde_polysph)
+export(proj_polysph)
 export(r_g_kern)
 export(r_kde_polysph)
 export(r_kern_polysph)
@@ -41,6 +43,7 @@ export(r_path_s1r)
 export(r_path_s2r)
 export(r_unif_polysph)
 export(r_vmf_polysph)
+export(softplus)
 export(sph_to_angles)
 export(torus_to_angles)
 export(v_d)
