--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,14 @@ Package: polykde
 Type: Package
 Title: Polyspherical Kernel Density Estimation
 Version: 1.1.0
-Date: 2025-02-25
+Date: 2025-03-01
 Authors@R: c(person(given = "Eduardo", family = "García-Portugués",
                     role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es",
                     comment = c(ORCID = "0000-0002-9224-4111")),
              person(given = "Andrea", family = "Meilán-Vila",
                     role = c("ctb"), email = "ameilan@est-econ.uc3m.es",
                     comment = c(ORCID = "0000-0001-8537-9280")))
-Description: Kernel density estimation on the polysphere, hypersphere, and
+Description: Kernel density estimation on the polysphere, (hyper)sphere, and
     circle. Includes functions for density estimation, regression estimation,
     ridge estimation, bandwidth selection, kernels, samplers, and homogeneity
     tests. Companion package to García-Portugués and Meilán-Vila (2024)
@@ -17,6 +17,8 @@ Description: Kernel density estimation on the polysphere, hypersphere, and
     (2023) <doi:10.1007/978-3-031-32729-2_4>.
 License: GPL-3
 LazyData: true
+Depends:
+    R (>= 3.5.0)
 Imports:
     abind,
     doFuture,
@@ -31,6 +33,7 @@ Imports:
     sphunif
 Suggests:
     alphashape3d,
+    Bessel,
     DirStats,
     FixedPoint,
     ks,
