Add hammer functions and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,10 @@ export(dist_polysph_cross)
 export(dist_polysph_matrix)
 export(eff_kern)
 export(euler_ridge)
+export(fib_latt)
 export(grad_L)
 export(grad_hess_kde_polysph)
+export(hammer_to_sph)
 export(hess_L)
 export(hom_test_polysph)
 export(index_ridge)
@@ -45,6 +47,7 @@ export(r_unif_polysph)
 export(r_vmf_polysph)
 export(softplus)
 export(sph_to_angles)
+export(sph_to_hammer)
 export(torus_to_angles)
 export(v_d)
 export(view_srep)
