Add mixture samplers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(c_kern)
 export(clean_euler_ridge)
 export(comp_ind_dj)
 export(curv_vmf_polysph)
+export(d_mvmf_polysph)
 export(d_unif_polysph)
 export(d_vmf_polysph)
 export(dist_polysph)
@@ -41,6 +42,7 @@ export(proj_polysph)
 export(r_g_kern)
 export(r_kde_polysph)
 export(r_kern_polysph)
+export(r_mvmf_polysph)
 export(r_path_s1r)
 export(r_path_s2r)
 export(r_unif_polysph)
