--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polykde
 Type: Package
 Title: Polyspherical Kernel Density Estimation
-Version: 1.1.7
-Date: 2025-07-08
+Version: 1.1.6
+Date: 2025-07-27
 Authors@R: c(person(given = "Eduardo", family = "García-Portugués",
                     role = c("aut", "cre"), email = "edgarcia@est-econ.uc3m.es",
                     comment = c(ORCID = "0000-0002-9224-4111")),
@@ -12,8 +12,8 @@ Authors@R: c(person(given = "Eduardo", family = "García-Portugués",
 Description: Kernel density estimation on the polysphere, (hyper)sphere, and
     circle. Includes functions for density estimation, regression estimation,
     ridge estimation, bandwidth selection, kernels, samplers, and homogeneity
-    tests. Companion package to García-Portugués and Meilán-Vila (2024)
-    <doi:10.48550/arXiv.2411.04166> and García-Portugués and Meilán-Vila
+    tests. Companion package to García-Portugués and Meilán-Vila (2025)
+    <doi:10.1080/01621459.2025.2521898> and García-Portugués and Meilán-Vila
     (2023) <doi:10.1007/978-3-031-32729-2_4>.
 License: GPL-3
 LazyData: true
