--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(c_kern)
 export(clean_euler_ridge)
 export(comp_ind_dj)
 export(curv_vmf_polysph)
+export(d_mvmf_polysph)
 export(d_unif_polysph)
 export(d_vmf_polysph)
 export(dist_polysph)
@@ -22,8 +23,10 @@ export(dist_polysph_cross)
 export(dist_polysph_matrix)
 export(eff_kern)
 export(euler_ridge)
+export(fib_latt)
 export(grad_L)
 export(grad_hess_kde_polysph)
+export(hammer_to_sph)
 export(hess_L)
 export(hom_test_polysph)
 export(index_ridge)
@@ -39,12 +42,14 @@ export(proj_polysph)
 export(r_g_kern)
 export(r_kde_polysph)
 export(r_kern_polysph)
+export(r_mvmf_polysph)
 export(r_path_s1r)
 export(r_path_s2r)
 export(r_unif_polysph)
 export(r_vmf_polysph)
 export(softplus)
 export(sph_to_angles)
+export(sph_to_hammer)
 export(torus_to_angles)
 export(v_d)
 export(view_srep)
